--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 					<ul>
 						<li class="current"><a href="index.html">Home</a></li>
 						<li>
-							<a href="#">Dropdown</a>
+							<a href="#">Narzędzia testerskie</a>
 							<ul>
-								<li><a href="#">Lorem ipsum dolor</a></li>
-								<li><a href="#">Magna phasellus</a></li>
+								<li><a href="#">Selenium</a></li>
+								<li><a href="#">Robot Framework</a></li>
 								<li>
-									<a href="#">Phasellus consequat</a>
+									<a href="#">Testy wydajności - Jmeter</a>
 									<ul>
 										<li><a href="#">Lorem ipsum dolor</a></li>
 										<li><a href="#">Phasellus consequat</a></li>
