--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -33,7 +33,7 @@
 							<ul>
 								<li><a href="#">JIRA</a></li>
 								<li><a href="#">Testlink</a></li>
-								
+
 
 									<ul>
 										<li><a href="#">Lorem ipsum dolor</a></li>
@@ -72,7 +72,7 @@
 											</header>
 
 											<section>
-												<span class="image featured"><img src="images/pic05.jpg" alt="" /></span>
+												<span class="image featured"><img src="se-logo.png" alt="" /></span>
 												<p>
 													The primary new feature in Selenium 2.0 is the integration of the WebDriver API.
 													WebDriver is designed to provide a simpler, more concise programming interface
