--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -72,7 +72,7 @@
 											</header>
 
 											<section>
-												<span class="image featured"><img src="se-logo.png" alt="" /></span>
+
 												<p>
 													The primary new feature in Selenium 2.0 is the integration of the WebDriver API.
 													WebDriver is designed to provide a simpler, more concise programming interface
@@ -211,7 +211,7 @@ Unlike in Selenium 1, where the Selenium server was necessary to run tests, Sele
 
 													<!-- Feature -->
 														<section class="box feature">
-															<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+															<a href="#" class="image featured"><img src="se-logo.png" alt="" /></a>
 															<h3><a href="#">And Another</a></h3>
 															<p>
 																Phasellus quam turpis, feugiat sit amet ornare in, a hendrerit in
